--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -13,18 +14,25 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "formik": "^2.4.6",
+    "google-auth-library": "^9.14.2",
     "i18next": "^23.11.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.0",
+    "sequelize": "^6.37.5",
     "web-vitals": "^2.1.3",
     "yup": "^1.4.0"
   },
