--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^9.14.2",
     "i18next": "^23.11.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.0",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16",
